antlr-generated/czabtal/czabtalParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g 2010-06-02 02:13:49

	package czabtal;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class czabtalParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "START", "POLECENIA_FUN", "DEKL", "TYP_LOGICZNY", "IMPORTR", "NEWLINE", "DEF", "IFR", "PRINTR", "PRZYP", "WYR_WARUN", "ELSER", "ARGS", "POlECENIA_FORARGS", "FORARGS", "RETURNR", "IDKI", "NL", "IMPORT", "IDENT", "LOGICAL", "AS", "GATE", "IF", "ENDIF", "ELSEIF", "ELSE", "GATEDEF", "BEGIN", "END", "RETURN", "PRINT", "ON", "NOT", "AND", "OR", "IS", "TRUE", "FALSE", "COMMENT", "WS", "ERROR"
    };
    public static final int DEF=10;
    public static final int POLECENIA_FUN=5;
    public static final int NOT=37;
    public static final int AND=38;
    public static final int EOF=-1;
    public static final int IF=27;
    public static final int AS=25;
    public static final int IMPORT=22;
    public static final int IDKI=20;
    public static final int IS=40;
    public static final int BEGIN=32;
    public static final int RETURN=34;
    public static final int ENDIF=28;
    public static final int ARGS=16;
    public static final int IDENT=23;
    public static final int FORARGS=18;
    public static final int NL=21;
    public static final int COMMENT=43;
    public static final int RETURNR=19;
    public static final int GATE=26;
    public static final int TYP_LOGICZNY=7;
    public static final int ELSE=30;
    public static final int ON=36;
    public static final int GATEDEF=31;
    public static final int ERROR=45;
    public static final int TRUE=41;
    public static final int PRINT=35;
    public static final int IFR=11;
    public static final int ELSEIF=29;
    public static final int WS=44;
    public static final int PRINTR=12;
    public static final int NEWLINE=9;
    public static final int WYR_WARUN=14;
    public static final int PRZYP=13;
    public static final int ELSER=15;
    public static final int OR=39;
    public static final int DEKL=6;
    public static final int START=4;
    public static final int LOGICAL=24;
    public static final int IMPORTR=8;
    public static final int END=33;
    public static final int FALSE=42;
    public static final int POlECENIA_FORARGS=17;

    // delegates
    // delegators


        public czabtalParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public czabtalParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return czabtalParser.tokenNames; }
    public String getGrammarFileName() { return "/home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g"; }


        @Override
        public String getErrorHeader(RecognitionException e) {
            return Precompiler.getPositionForLine(e.line);
        }

        @Override
        public String getErrorMessage(RecognitionException e, String[] tokenNames) {
        	String msg = null;
            if(e instanceof NoViableAltException ||
               e instanceof EarlyExitException) {
                String tokenName = e.token.getText();
                if(e.token.getType() == NL)
                    tokenName = "\\n";
                msg = "Found unexpected symbol: '" + tokenName + "'.";
            } else if(e instanceof MismatchedTokenException) {
                MismatchedTokenException mte = (MismatchedTokenException)e;
                msg = "Expecting " + tokenNames[mte.expecting];
        	} else if(e instanceof MismatchedTreeNodeException) {
                MismatchedTreeNodeException mte = (MismatchedTreeNodeException)e;
                msg = "Expecting " + tokenNames[mte.expecting];
        	} else {
                msg = super.getErrorMessage(e, tokenNames) + e.getClass();
        	}
        	return msg;
        }


    public static class start_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:1: start : ( NL )* ( polecenie newline )* -> ^( START ( NL )* ( polecenie newline )* ) ;
    public final czabtalParser.start_return start() throws RecognitionException {
        czabtalParser.start_return retval = new czabtalParser.start_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NL1=null;
        czabtalParser.polecenie_return polecenie2 = null;

        czabtalParser.newline_return newline3 = null;


        CommonTree NL1_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleSubtreeStream stream_newline=new RewriteRuleSubtreeStream(adaptor,"rule newline");
        RewriteRuleSubtreeStream stream_polecenie=new RewriteRuleSubtreeStream(adaptor,"rule polecenie");
        try {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:8: ( ( NL )* ( polecenie newline )* -> ^( START ( NL )* ( polecenie newline )* ) )
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:10: ( NL )* ( polecenie newline )*
            {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:10: ( NL )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:11: NL
            	    {
            	    NL1=(Token)match(input,NL,FOLLOW_NL_in_start139);  
            	    stream_NL.add(NL1);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:16: ( polecenie newline )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=IMPORT && LA2_0<=LOGICAL)||(LA2_0>=GATE && LA2_0<=IF)||LA2_0==GATEDEF||LA2_0==PRINT) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:67:17: polecenie newline
            	    {
            	    pushFollow(FOLLOW_polecenie_in_start144);
            	    polecenie2=polecenie();

            	    state._fsp--;

            	    stream_polecenie.add(polecenie2.getTree());
            	    pushFollow(FOLLOW_newline_in_start146);
            	    newline3=newline();

            	    state._fsp--;

            	    stream_newline.add(newline3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: polecenie, newline, NL
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 68:1: -> ^( START ( NL )* ( polecenie newline )* )
            {
                // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:68:4: ^( START ( NL )* ( polecenie newline )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(START, "START"), root_1);

                // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:68:12: ( NL )*
                while ( stream_NL.hasNext() ) {
                    adaptor.addChild(root_1, stream_NL.nextNode());

                }
                stream_NL.reset();
                // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:68:18: ( polecenie newline )*
                while ( stream_polecenie.hasNext()||stream_newline.hasNext() ) {
                    adaptor.addChild(root_1, stream_polecenie.nextTree());
                    adaptor.addChild(root_1, stream_newline.nextTree());

                }
                stream_polecenie.reset();
                stream_newline.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class polecenie_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "polecenie"
    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:70:1: polecenie : ( pol_podst -> pol_podst | def -> ^( DEF def ) | importR -> ^( IMPORTR importR ) ) ;
    public final czabtalParser.polecenie_return polecenie() throws RecognitionException {
        czabtalParser.polecenie_return retval = new czabtalParser.polecenie_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        czabtalParser.pol_podst_return pol_podst4 = null;

        czabtalParser.def_return def5 = null;

        czabtalParser.importR_return importR6 = null;


        RewriteRuleSubtreeStream stream_pol_podst=new RewriteRuleSubtreeStream(adaptor,"rule pol_podst");
        RewriteRuleSubtreeStream stream_def=new RewriteRuleSubtreeStream(adaptor,"rule def");
        RewriteRuleSubtreeStream stream_importR=new RewriteRuleSubtreeStream(adaptor,"rule importR");
        try {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:71:2: ( ( pol_podst -> pol_podst | def -> ^( DEF def ) | importR -> ^( IMPORTR importR ) ) )
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:71:4: ( pol_podst -> pol_podst | def -> ^( DEF def ) | importR -> ^( IMPORTR importR ) )
            {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:71:4: ( pol_podst -> pol_podst | def -> ^( DEF def ) | importR -> ^( IMPORTR importR ) )
            int alt3=3;
            switch ( input.LA(1) ) {
            case IDENT:
            case LOGICAL:
            case GATE:
            case IF:
            case PRINT:
                {
                alt3=1;
                }
                break;
            case GATEDEF:
                {
                alt3=2;
                }
                break;
            case IMPORT:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:72:2: pol_podst
                    {
                    pushFollow(FOLLOW_pol_podst_in_polecenie180);
                    pol_podst4=pol_podst();

                    state._fsp--;

                    stream_pol_podst.add(pol_podst4.getTree());


                    // AST REWRITE
                    // elements: pol_podst
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 72:12: -> pol_podst
                    {
                        adaptor.addChild(root_0, stream_pol_podst.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:73:4: def
                    {
                    pushFollow(FOLLOW_def_in_polecenie189);
                    def5=def();

                    state._fsp--;

                    stream_def.add(def5.getTree());


                    // AST REWRITE
                    // elements: def
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 73:10: -> ^( DEF def )
                    {
                        // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:73:13: ^( DEF def )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DEF, "DEF"), root_1);

                        adaptor.addChild(root_1, stream_def.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:74:4: importR
                    {
                    pushFollow(FOLLOW_importR_in_polecenie204);
                    importR6=importR();

                    state._fsp--;

                    stream_importR.add(importR6.getTree());


                    // AST REWRITE
                    // elements: importR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 74:12: -> ^( IMPORTR importR )
                    {
                        // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:74:15: ^( IMPORTR importR )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IMPORTR, "IMPORTR"), root_1);

                        adaptor.addChild(root_1, stream_importR.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "polecenie"

    public static class pol_podst_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pol_podst"
    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:78:1: pol_podst : ( dekl -> ^( DEKL dekl ) | ifR -> ^( IFR ifR ) | printR -> ^( PRINTR printR ) | przyp -> ^( PRZYP przyp ) ) ;
    public final czabtalParser.pol_podst_return pol_podst() throws RecognitionException {
        czabtalParser.pol_podst_return retval = new czabtalParser.pol_podst_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        czabtalParser.dekl_return dekl7 = null;

        czabtalParser.ifR_return ifR8 = null;

        czabtalParser.printR_return printR9 = null;

        czabtalParser.przyp_return przyp10 = null;


        RewriteRuleSubtreeStream stream_dekl=new RewriteRuleSubtreeStream(adaptor,"rule dekl");
        RewriteRuleSubtreeStream stream_przyp=new RewriteRuleSubtreeStream(adaptor,"rule przyp");
        RewriteRuleSubtreeStream stream_ifR=new RewriteRuleSubtreeStream(adaptor,"rule ifR");
        RewriteRuleSubtreeStream stream_printR=new RewriteRuleSubtreeStream(adaptor,"rule printR");
        try {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:79:2: ( ( dekl -> ^( DEKL dekl ) | ifR -> ^( IFR ifR ) | printR -> ^( PRINTR printR ) | przyp -> ^( PRZYP przyp ) ) )
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:79:4: ( dekl -> ^( DEKL dekl ) | ifR -> ^( IFR ifR ) | printR -> ^( PRINTR printR ) | przyp -> ^( PRZYP przyp ) )
            {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:79:4: ( dekl -> ^( DEKL dekl ) | ifR -> ^( IFR ifR ) | printR -> ^( PRINTR printR ) | przyp -> ^( PRZYP przyp ) )
            int alt4=4;
            switch ( input.LA(1) ) {
            case LOGICAL:
            case GATE:
                {
                alt4=1;
                }
                break;
            case IF:
                {
                alt4=2;
                }
                break;
            case PRINT:
                {
                alt4=3;
                }
                break;
            case IDENT:
                {
                alt4=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:80:2: dekl
                    {
                    pushFollow(FOLLOW_dekl_in_pol_podst231);
                    dekl7=dekl();

                    state._fsp--;

                    stream_dekl.add(dekl7.getTree());


                    // AST REWRITE
                    // elements: dekl
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 80:10: -> ^( DEKL dekl )
                    {
                        // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:80:13: ^( DEKL dekl )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DEKL, "DEKL"), root_1);

                        adaptor.addChild(root_1, stream_dekl.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:81:4: ifR
                    {
                    pushFollow(FOLLOW_ifR_in_pol_podst247);
                    ifR8=ifR();

                    state._fsp--;

                    stream_ifR.add(ifR8.getTree());


                    // AST REWRITE
                    // elements: ifR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 81:10: -> ^( IFR ifR )
                    {
                        // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:81:13: ^( IFR ifR )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IFR, "IFR"), root_1);

                        adaptor.addChild(root_1, stream_ifR.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:82:4: printR
                    {
                    pushFollow(FOLLOW_printR_in_pol_podst262);
                    printR9=printR();

                    state._fsp--;

                    stream_printR.add(printR9.getTree());


                    // AST REWRITE
                    // elements: printR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 82:11: -> ^( PRINTR printR )
                    {
                        // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:82:14: ^( PRINTR printR )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PRINTR, "PRINTR"), root_1);

                        adaptor.addChild(root_1, stream_printR.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:83:4: przyp
                    {
                    pushFollow(FOLLOW_przyp_in_pol_podst276);
                    przyp10=przyp();

                    state._fsp--;

                    stream_przyp.add(przyp10.getTree());


                    // AST REWRITE
                    // elements: przyp
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 83:11: -> ^( PRZYP przyp )
                    {
                        // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:83:14: ^( PRZYP przyp )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PRZYP, "PRZYP"), root_1);

                        adaptor.addChild(root_1, stream_przyp.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pol_podst"

    public static class importR_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importR"
    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:87:1: importR : IMPORT IDENT -> IDENT ;
    public final czabtalParser.importR_return importR() throws RecognitionException {
        czabtalParser.importR_return retval = new czabtalParser.importR_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IMPORT11=null;
        Token IDENT12=null;

        CommonTree IMPORT11_tree=null;
        CommonTree IDENT12_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_IMPORT=new RewriteRuleTokenStream(adaptor,"token IMPORT");

        try {
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:87:9: ( IMPORT IDENT -> IDENT )
            // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:87:11: IMPORT IDENT
            {
            IMPORT11=(Token)match(input,IMPORT,FOLLOW_IMPORT_in_importR298);  
            stream_IMPORT.add(IMPORT11);

            IDENT12=(Token)match(input,IDENT,FOLLOW_IDENT_in_importR300);  
            stream_IDENT.add(IDENT12);



            // AST REWRITE
            // elements: IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 87:24: -> IDENT
            {
                adaptor.addChild(root_0, stream_IDENT.nextNode());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "importR"

    public static class dekl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dekl"
    // /home/czaber/Pobrane/Czabtal/src/czabtal/czabtal.g:90:1: dekl : ( LOGICAL IDENT ( AS typ_logiczny )? -> LOGICAL IDENT ( ^( TYP_LOGICZNY typ_logiczny ) )? | GATE IDENT AS IDENT -> GATE IDENT IDENT );
    public final czabtalParser.dekl_return dekl() throws RecognitionException {
        czabtalParser.dekl_return retval = new czabtalParser.dekl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LOGICAL13=null;
        Token IDENT14=null;
        Token AS15=null;
        Token GATE17=null;
        Token IDENT18=null;
        Token AS19=null;
        Token IDENT20=null;
        czabtalParser.typ_logiczny_return typ_logiczny16 = null;

